# webmcp

./: .gitignore  LICENSE  README.md  pyproject.toml  test_all.py
src/web_mcp/: __main__.py  server.py
src/web_mcp/browser/: manager.py  snapshot.py  stealth.py  tools.py
src/web_mcp/content/: tools.py
src/web_mcp/search/: tools.py
